--- a/foodpicker/templates/add.html
+++ b/foodpicker/templates/add.html
@@ -9,33 +9,33 @@
 <body>
     <div class="main">
         <form method="post">
-            <button type="submit" name="action" value="back" class="bck">zurück</button>
+            <button type="submit" name="action" value="back" class="bck">back</button>
         </form>
 
-        <img src="/static/css/logo.jpg" alt="bild konnte nicht geladen werden">
+        <img src="/static/css/logo.jpg" alt="picture">
         {% if text and not err %}
         <div>
-            <p style="background-color: green; text-align: center;border-radius: 1.5vw;">{{text}} wurde hinzugefügt</p>
+            <p style="background-color: green; text-align: center;border-radius: 1.5vw;">{{text}} was added</p>
         </div>
         {% endif %}
         {% if err == "error" %}
-            <p style="color:red; text-align: center;">Fehler: Bitte füllen Sie alle Felder aus!</p>
+            <p style="color:red; text-align: center;">Error: fill out all the fields</p>
 
         {% elif err == "error1" %}
-            <p style="color:red; text-align: center;">{{text}} wurde schon hinzugefügt</p>
+            <p style="color:red; text-align: center;">{{text}} was added</p>
 
         {% endif %}
         <form method="post">
             <div class="checkbox-group">
-                <input type="radio" id="kinder" name="tag" value="kinder" class="check1">
-                <label for="kinder">Kinder</label>
-                <input type="radio" id="eltern" name="tag" value="eltern" class="check2">
-                <label for="eltern">Eltern</label>
+                <input type="radio" id="children" name="tag" value="children" class="check1">
+                <label for="children">children</label>
+                <input type="radio" id="parents" name="tag" value="parents" class="check2">
+                <label for="parents">parents</label>
             </div>
             <br>
             <div class="inpt">
             <input type="text" class="txt" name="text">
-            <input type="submit" class="sbmt" value="hinzufügen">
+            <input type="submit" class="sbmt" value="add">
             </div>
         </form>
     </div>
